--- a/app/styles/components/_navigation.scss
+++ b/app/styles/components/_navigation.scss
@@ -7,6 +7,10 @@
     color: $nav-text-color;
   }
 
+  .active-link {
+    font-weight: bold;
+  }
+
   .menu > .menu-text > a {
     display: inline;
     padding: 0;
