--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,11 @@
 @import "base/variables";
+// foundation
+@import "base/foundation-settings";
+@import "foundation";
+@include foundation-everything;
+
+// Components
 @import "components/navigation";
 @import "components/clock";
 @import "components/controls";
-@import "components/page-title"
+@import "components/page-title";
